# PhySynthTrainer

./: .gitignore  LICENSE  MANIFEST.in  README.md  base.yml  pyproject.toml
example/: base.yml  create_training_set.py  demo.ipynb  demo.py  detection_demo.ipynb  script_gen.py  test.py  test_config.py  test_mask_to_bbox.py
example/labels/: test_bursts.txt
example/runs/detect/predict/labels/: test.txt
example/runs/detect/predict2/labels/: test.txt
inspect_train/: plot_model_inspect.ipynb  plot_model_inspect.py
paper/: paper.bib  paper.md
physynthtrainer/: __init__.py  base.yml  burstGen.py  densityModel.py  freqDrift.py  plasmaFreq.py  utils.py
physynthtrainer/data/: latest_data.3.npz  latest_data.npz
scripts/: README.md  background_2024.npz  background_collect.py  bckgrd_list.npz  gen_yolo_dataset.py
